src/test/testFiles/invalid/semanticErrors/array2DAccessIncorrectIndexType.manimdsl
let x = Array<number>(3, 5);
let y = Stack<number>();
x[0][y] = 1;